# discretax

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_channel_mixers.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
_static/: index.html
api/base/blocks/: index.html
api/base/channel_mixer/: index.html
api/base/encoder/: index.html
api/base/heads/: index.html
contributing/: index.html
docs/: contributing.md  index.md  reference.md
docs/_static/: README.md  custom_css.css
docs/examples/: 01_introduction_&_classification.ipynb
docs/reference/: blocks.md  channel_mixers.md  encoder.md  heads.md  index.md  linax.md  models.md  sequence_mixers.md  utils.md
examples/: 01_introduction.ipynb  01_introduction_&_classification.ipynb  basic_usage.py  datasets.py
examples/01_introduction_&_classification/: index.html
reference/: index.html
reference/blocks/: index.html
reference/channel_mixers/: index.html
reference/encoder/: index.html
reference/heads/: index.html
reference/linax/: index.html
reference/models/: index.html
reference/sequence_mixers/: index.html
reference/utils/: index.html
search/: search_index.json
src/discretax/: utils.py
src/examples/: train.ipynb
src/linax/: __init__.py  utils.py
tests/: basic_usage.py  test_all_models.py  test_blocks_and_models.py  test_channel_mixers.py  test_deltanet.py
(+143 files in other folders)
